--- a/docs/macroeconomics.tex
+++ b/docs/macroeconomics.tex
@@ -1,3 +1,6 @@
+\section{Systems of Trust}
+\label{sec:macroeconomics}
+
 Bitcoin was not created in a vacuum and to understand the design of Bitcoin and by extension the Lightning Network one would
 benefit from understanding money and systems of trust. Nakamoto encoded the string "the times 03/jan/2009 chancellor on brink of second bailout for banks"\cite{repository:bitcoin:sourceforge}\cite{bitcoin:genesis:coinbase} in the coinbase transaction of the genesis block as an alleged comment on the current banking system as well as a time stamp. He later cemented this view with multiple forum posts while he still was active\cite{nakamoto:post:deflation}\cite{nakamoto:govern:print}.
 
