--- a/docs/main.tex
+++ b/docs/main.tex
@@ -23,6 +23,10 @@
 \usepackage{pgfplots}
 \usepackage{svg}
 
+\usepackage{xcolor}
+\usepackage{listings}
+\lstset{escapeinside={<@}{@>}}
+%\usepackage{minted}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 
