--- a/docs/printSubSection.tex
+++ b/docs/printSubSection.tex
@@ -102,10 +102,18 @@
 
 \begin{document}
 
-    \section{Systems of Trust}
-    \label{sec:macroeconomics}
+    \setcounter{secnumdepth}{2}
+    \setcounter{tocdepth}{2}
+
+    \thispagestyle{empty}
+    \newpage
+    \setcounter{page}{1}
+    \setcounter{section}{0}
+
+    \twocolumn
     \input{macroeconomics}
 
+    \onecolumn
     \newpage
     \addcontentsline{toc}{section}{References}
     \bibliographystyle{plain}
