--- a/docs/references.bib
+++ b/docs/references.bib
@@ -15,9 +15,8 @@
 	title = {The coinbase transaction of the genesis block.},
 	howpublished = {
 		\url{https://www.blockchain.com/btc/tx/4a5e1e4baab89f3a32518a88c31bc87f618f76673e2cc77ab2127b7afdeda33b?show_adv=true}},
-	note = {The source forge repostiory was later moved to github.},
+	note = {(Accessed on 2019-01-30)},
 }
-
 
 @book{
 	crown:gold,
@@ -53,8 +52,8 @@
 	author = {Menger, Carl},   
 	title = {On the Origins of Money},
 	note = { },
-	journal =  Economic Journal,
-	year = 1892,
+	journal =  "Economic Journal",
+	year = "1892",
 	howpublished = {\url{http://www.socsci.mcmaster.ca/~econ/ugcm/3ll3/menger/money.txt}},
 	pages = {239-55}
 }
@@ -111,8 +110,117 @@
 	publisher = { Wiley },
 }
 
+@misc{
+	fed:function:money,
+	title = {Functions of Money},
+	author = {Federal Reserve Bank of Saint Louis},
+	year = "",
+	%	volume = "1",
+	howpublished = {
+	\url{https://www.stlouisfed.org/education/economic-lowdown-podcast-series/episode-9-functions-of-money}
+	},
+}
 
+@book{
+	hanke:krus:hyperinflation:table,
+	author = {Hanke, Steve H. and Krus, Nicholas},
+	title = "World Hyperinflations",
+	year = "2012",
+	month = "August",
+	day = "15",
+	howpublished = {
+	\url{https://upload.wikimedia.org/wikipedia/en/8/88/The_Hanke_Krus_Hyperinflation_Table.pdf}
+	},
+}
 
+@article{
+	weber:bitcoin:standard,
+	title = {A Bitcoin Standard: Lessons from the Gold Standard},
+	author = { Weber, Warren E. },
+	publisher = {Bank of Canada},
+	month = "October",
+	year = "2015",
+	howpublished = {
+	\url{https://www.bankofcanada.ca/wp-content/uploads/2015/12/bitcoin-standard-lessons.pdf}
+	},
+}
+
+@misc{
+	hanke:hyperinflation,
+	author={Hanke, Steve H.},
+	title={Venezuela Hyperinflation}
+	howpublished = {
+	\url{https://www.forbes.com/sites/stevehanke/2018/10/23/venezuelas-hyperinflation-24-months-and-counting/#778fc64a162d}
+	},	
+}
+
+@misc{
+	roosevelt:6102,
+	author = {Roosevelt, Franklin D.},
+	title = "Executive order 6102",
+	howpublished = {
+	\url{https://en.wikipedia.org/wiki/Executive_Order_6102#/media/File:Executive_Order_6102.jpg}
+	},	
+}
+
+@mist{
+	gold:reserve:act,
+	author = {Roosevelt, Franklin D.},
+	title = "The Gold Reserve Act",
+	year = "1934",
+	month = "January",
+	day = "30",
+	howpublished = {
+	\url{	http://legisworks.org/congress/73/publaw-87.pdf}
+	},	
+}
+
+@book{
+	keynes:general:theory,
+	author = {Keynes, John Maynard},
+	title = "The General Theory of Employment, 
+	Interest, and Money",
+	year = "1936",
+	howpublished = {
+	\url{http://cas2.umkc.edu/economics/people/facultypages/kregel/courses/econ645/winter2011/generaltheory.pdf}
+	}
+}
+
+@article{
+	bordo:bretton:woods,
+	title={The imbalances of the Bretton Woods system 1965 to 1973: U.S. Inflation, the elephants in the room},
+	author={Bordo, Michael D.}
+	publisher={National bureau of economic research 1050 massachusetts avenue, cambridge, MA 02138, December 2018},
+	howpublished = {
+	\url{http://papers.nber.org/tmp/42782-w25409.pdf}
+	}
+}
+
+@misc{nakamoto:post:deflation,
+	author = {nakamoto, Satoshi},
+	title = {Bitcoin talk forum post},
+	year = "2010",
+	howpublished = {
+	\url{https://bitcointalk.org/index.php?topic=57.msg415#msg415}},
+	note = {\\(Accessed on 2019-02-04)},
+}
+
+@misc{nakamoto:govern:print,
+	author = {Nakamoto, Satoshi},
+	title = {Bitcoin talk forum post},
+	year = "2010",
+	howpublished = {
+	\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}},
+	note = {\\(Accessed on 2019-02-04)},
+}
+
+% Satoshi forum posts
+https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
+
+# 13 | 527
+https://bitcointalk.org/index.php?topic=13.msg46#msg46
+
+TOR, reverse govern-print mention
 
 % Bitcoin
 
@@ -125,6 +233,18 @@
 	year = {2014},
 	edition = {first},
 	note = { }
+}
+
+@book{
+	antonopoulos:the:internet:of:money,
+	author = {Antonopoulos, Andreas},   
+	title = {The Internet of Money},
+	publisher = {Merkle Bloom LLC},
+	day = "30",
+	month = {August},
+	year = {2016},
+	edition = {first},
+	isbn = { 1537000454 }
 }
 
 @article{
@@ -172,118 +292,6 @@
 	note = {},
 }
 
-@misc{
-	fed:function:money,
-	title = {Functions of Money},
-	author = {Federal Reserve Bank of Saint Luis},
-	year = "",
-%	volume = "1",
-	howpublished = {
-		\url{https://www.stlouisfed.org/education/economic-lowdown-podcast-series/episode-9-functions-of-money}
-	},
-}
-
-@book{
-	hanke:krus:hyperinflation:table,
-	author = {Hanke, Steve H.; Krus, Nicholas},
-	title = "World Hyperinflations",
-	year = "2012",
-	month = "August",
-	day = "15",
-	howpublished = {
-		\url{https://upload.wikimedia.org/wikipedia/en/8/88/The_Hanke_Krus_Hyperinflation_Table.pdf}
-	},
-}
-
-@article{
-	weber:bitcoin:standard,
-	title = {A Bitcoin Standard: Lessons from the Gold Standard},
-	author = { Weber, Warren E. },
-	publisher = {Bank of Canada},
-	month = "October",
-	year = "2015",
-	howpublished = {
-		\url{https://www.bankofcanada.ca/wp-content/uploads/2015/12/bitcoin-standard-lessons.pdf}
-	},
-}
-
-@misc{
-	hanke:hyperinflation,
-	author={Hanke, Steve H.},
-	title={Venezuela Hyperinflation}
-	howpublished = {
-		\url{https://www.forbes.com/sites/stevehanke/2018/10/23/venezuelas-hyperinflation-24-months-and-counting/#778fc64a162d}
-	},	
-}
-
-@misc{
-	roosevelt:6102,
-	author = {Roosevelt, Franklin D.},
-	title = "Executive order 6102",
-	howpublished = {
-		\url{https://en.wikipedia.org/wiki/Executive_Order_6102#/media/File:Executive_Order_6102.jpg}
-	},	
-}
-
-@mist{
-	gold:reserve:act,
-	author = {Roosevelt, Franklin D.},
-	title = "The Gold Reserve Act",
-	year = "1934",
-	month = "January",
-	day = "30",
-	howpublished = {
-		\url{	http://legisworks.org/congress/73/publaw-87.pdf}
-	},	
-}
-
-@book{
-	keynes:general:theory,
-	author = {Keynes, John Maynard},
-	title = "The General Theory of Employment, 
-	Interest, and Money",
-	year = "1936",
-	howpublished = {
-		\url{http://cas2.umkc.edu/economics/people/facultypages/kregel/courses/econ645/winter2011/generaltheory.pdf}
-	}
-}
-
-@article{
-	bordo:bretton:woods,
-	title={The imbalances of the Bretton Woods system 1965 to 1973: U.S. Inflation, the elephants in the room},
-	author={Bordo, Michael D.}
-	publisher={National bureau of economic research 1050 massachusetts avenue, cambridge, MA 02138, December 2018},
-	howpublished = {
-		\url{http://papers.nber.org/tmp/42782-w25409.pdf}
-	}
-}
-
-@misc{nakamoto:post:deflation,
-	author = {nakamoto, Satoshi},
-	title = {Bitcoin talk forum post},
-	year = "2010",
-	howpublished = {\\
-		\url{https://bitcointalk.org/index.php?topic=57.msg415#msg415}},
-	note = {\\(Accessed on 06/11/2018)\\},
-}
-
-@misc{nakamoto:govern:print,
-	author = {Nakamoto, Satoshi},
-	title = {Bitcoin talk forum post},
-	year = "2010",
-	howpublished = {\\
-	\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}},
-	note = {\\(Accessed on 06/11/2018)\\},
-}
-
-% Satoshi forum posts
-https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
-
-# 13 | 527
-https://bitcointalk.org/index.php?topic=13.msg46#msg46
-
-TOR, reverse govern-print mention
-
 % Bitcoin - Bips
 
 @misc{repository:bip:segwit,
@@ -312,8 +320,6 @@ TOR, reverse govern-print mention
 	\url{https://github.com/bitcoin/bips}},
 	note = {},
 }
-
-
 
 % Lightning 
 
@@ -407,12 +413,11 @@ year = "",
 
 
 @article{singh:dwivedi:strivastava:energy:consumption:mining,
-	author =   {Singh, Rajani; Dhar Dwivedi1, Ashutosh; Srivastava, Gautam },
+	author =   {Singh, Rajani and Dhar Dwivedi, Ashutosh and Srivastava, Gautam },
 	title =    {Energy consumption in Bitcoin Mining: A Game
 	Theoretic Analysis},
 	year =     2018,
 	journal = {
-	
 		Institute of Computer Science, Polish Academy of Sciences, Warsaw, Poland;
 		Faculty of Mathematics, Informatics, and Mechanics, University of Warsaw, Warsaw, Poland;
 		Research Center for Interneural Computing, China Medical University, Taichung, Taiwan, China;
@@ -436,72 +441,4 @@ haveit =   {pdf}
 	howpublished = {
 		\url{https://arxiv.org/pdf/1901.04620.pdf}},
 	haveit =   {pdf}
-}
-
-
-@Article(Borlin2013:Bundle,
-seqno =    817,
-author =   {Niclas B{\"o}rlin and Pierre Grussenmeyer},
-title =    {Bundle Adjustment with and without Damping},
-journal =      PhotogrammRec,
-year =     2013,
-volume =   28,
-number =   144,
-pages =    {396-415},
-month =    dec,
-doi =          {10.1111/phor.12037},
-keywords =     {adjustment, bundle, convergence, initial values,
-	least squares, terrestrial photogrammetry},
-abstract =     {The least squares adjustment (LSA) method is studied
-	as an optimisation problem and shown to be
-	equivalent to the undamped Gauss-Newton (GN)
-	optimisation method. Three problem-independent
-	damping modifications of the GN method are
-	presented: the line search method of Armijo (GNA);
-	the Levenberg-Marquardt algorithm (LM); and
-	Levenberg-Marquardt with Powell dogleg (LMP).
-	Furthermore, an additional problem-specific "veto"
-	damping technique, based on the chirality condition,
-	is suggested. In a perturbation study on a
-	terrestrial bundle adjustment problem, the GNA and
-	LMP methods with veto damping can increase the size
-	of the pull-in region compared to the undamped
-	method; the LM method showed less improvement. The
-	results suggest that damped methods can, in many
-	cases, provide a solution where undamped methods
-	fail and should be available in any LSA software
-	package. Matlab code for the algorithms discussed is
-	available from the authors.},
-haveit =   {pdf}
-)
-
-@InCollection{Fraser1989:Optimization,
-	seqno = 634,
-	author =   {Clive S. Fraser},
-	title =    {Optimization of Networks in Non-Topographic Photogrammetry},
-	booktitle =    "{Non}-{Topographic} {Photogrammetry}",
-	year = 1989,
-	pages =    {95-106},
-	publisher =    "American Society for Photogrammetry and Remote Sensing",
-	editor =   "H. M. Karara",
-	chapter =  8,
-	edition =  "2nd",
-	haveit = "pdf"
-}
-
-
-@PhdThesis{DApuzzo2003:Thesis,
-	seqno = 647,
-	author =   {Nicolas D'Apuzzo},
-	title =    {Surface measurement and tracking of human body parts from multi station video sequences},
-	school =   {Institute of Geodesy and Photogrammetry, ETH Z{\"u}rich},
-	address =      {Z{\"u}rich, Switzerland},
-	year =     2003,
-	month =    oct,
-	abstract = {This work pertains to surface measurement and surface
-	tracking of human body parts using video sequences
-	acquired by multiple cameras. Traditionally, and
-	even today, research and commercial applications
-	.},
-	haveit = "pdf"
 }
