more txt on bitcoin, Dijkstra fee routing

--- a/docs/UmUThesis.sty
+++ b/docs/UmUThesis.sty
@@ -300,4 +300,4 @@
 % Captions
 \renewcommand{\captionlabelfont}{\bfseries} % Font used for the name
 \renewcommand{\captionfont}{\small}         % Font size 
-\setlength{\captionmargin}{0.05\linewidth} 
+%\setlength{\captionmargin}{0.05\linewidth} 
