--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -3,7 +3,9 @@
     \input{problem}
 
 \clearpage
+   \label{sec:macroeconomics}
    \input{macroeconomics}
+   
 \clearpage
 \section{The Bitcoin Network}
     \label{sec:bitcoin}
@@ -14,6 +16,8 @@
 %    \input{results}
 \clearpage
 \section{Lightning Network}
+    \label{sec:lightning:network}
+    \input{lightning}
 \clearpage
 \section{Evaluation}
 \clearpage
