--- a/docs/main.tex
+++ b/docs/main.tex
@@ -26,7 +26,7 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \lstset{escapeinside={<@}{@>}}
-%\usepackage{minted}
+
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 
@@ -35,16 +35,16 @@
 % Routing Fee Estimation in Bidirectional payment channel networks
 % Non Eploitable pricing of liqid channels in the lightning network
 
-%\title{\mytitle}
-%\def\theauthor{John-John Markstedt}
-%\author{John-John Markstedt}
-%\supervisor{Oskar Janson}
-%\examiner{Henrik Bj\"{o}rklund}
-%\semester{VT17}
-%\course{5DV097}
-%\def\umu{Ume\r{a} University}
-%\def\journal{
-%    MSc Computing Science and Engineering, \umu{} 2017}
+\title{\mytitle}
+\def\theauthor{John-John Markstedt}
+\author{John-John Markstedt}
+\supervisor{Oskar Janson}
+\examiner{Henrik Bj\"{o}rklund}
+\semester{VT17}
+\course{5DV097}
+\def\umu{Ume\r{a} University}
+\def\journal{
+    MSc Computing Science and Engineering, \umu{} 2017}
 
 %\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 
@@ -62,33 +62,6 @@
 
 \DeclareMathOperator{\tr}{tr}
 \DeclareMathOperator{\RMS}{RMS}
-
-%\makeatletter         
-%\def\@maketitle{
-  %  \begin{tabular}{p{2.4cm}p{.3cm}P{.9cm}P{6.8cm}P{.9cm}p{.3cm}p{2.4cm}}
-   %     \multirow{3}{*}{
-     %       \centering
-            
-       %     \includegraphics[width=3.0cm]{umu-logo} \\
-     %       \\
-            
-%        } \\
-%        &&& {\small \journal}
-%        \\ [2ex]
-%        && \multicolumn{4}{p{11.5cm}}{
-        
-    %        \centering
-            
-    %        \begin{minipage}[t]{10.5cm}
-     %           {\large \bfseries \@title} \\ [1ex]
-      %          {\bfseries \@author}\\[.5ex] 
-     %           {Supervisor: \@supervisor}\\[.5ex] 
-     %           {Examiner: \@examiner}\\
-    %        \end{minipage} 
-        
- %   \end{tabular}
- %   \vspace{2ex}2
-%}
 
 \makeatother
 
@@ -128,7 +101,6 @@
   		\vspace{10mm}
   		\LARGE{ Routing Fee Estimation in the Lightning Network } \\
   		\vspace{2mm}
-%  		\LARGE{preliminary 1.0} \\
 
 		\input{abstract}
 
@@ -141,8 +113,8 @@
   				\textbf{Examinator} & Henrik Björklund\\
   			\end{tabular}
   			\vfill
-  			\vfill			\end{large}
-  		
+  			\vfill			
+  		\end{large}
   		
   	\end{center}
   \end{titlepage}
