--- a/docs/references.bib
+++ b/docs/references.bib
@@ -265,6 +265,18 @@ TOR, reverse govern-print mention
 	issue_date = {a August 2002},
 }
 
+@misc{
+	nakamoto:finney:tx,
+	author = {},
+	title = {The first transaction, Satoshi Nakamoto -> Hal Finney in block 170},
+	howpublished = {
+		\url{https://www.blockchain.com/btc/tx/f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16}
+	},
+	note = {\\(Accessed on 2019-02-06)}
+}
+
+
+
 @misc{repository:bitcoin,
 	author = {},
 	title = {Bitcoin Reference Implementation},
@@ -294,7 +306,7 @@ TOR, reverse govern-print mention
 
 % Bitcoin - Bips
 
-@misc{repository:bip:segwit,
+@misc{bip:0141:segwit,
 	author = {Lombrozo, Eric; Lau, Johnson; Wuille, Pieter},
 	title = {BIP 0141 Segregated Witness},
 	year = "",
@@ -303,13 +315,45 @@ TOR, reverse govern-print mention
 	note = {\\(Accessed on 06/11/2018)\\},
 }
 
-@misc{repository:bip:uasf:segwit,
+@misc{bip:uasf:segwit,
 	author = {},
 	title = {BIP 0141 Segregated Witness},
 	year = "",
 	howpublished = {\\
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0148.mediawiki}},
 	note = {\\(Accessed on 06/11/2018)\\},
+}
+
+@misc{
+	bip:0147:dummy:zero,
+	author = {Lau, Johnson},
+	title = {BIP 0147 Dealing with dummy stack element malleability},
+	year = "",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0147.mediawiki}},
+	note = {\\(Accessed on 2019-02-07)\\},
+}
+
+@misc{bip:0016:p2sh,
+	author = {Andersen, Gavin},
+	title = {BIP 0016 Pay to Script Hash},
+	year = "2012",
+	month = "January",
+	day = "03",
+	howpublished = {
+	\url{https://github.com/bitcoin/bips/blob/master/bip-0016.mediawiki}},
+	note = {\\(Accessed on 2019-02-07)\\},
+}
+
+@misc{bip:0013:p2shaddr,
+	author = {Andersen, Gavin},
+	title = {BIP 0013 Address Format for pay-to-script-hash},
+	year = "2012",
+	month = "January",
+	day = "03",
+	howpublished = {
+	\url{https://github.com/bitcoin/bips/blob/master/bip-0013.mediawiki}},
+	note = {\\(Accessed on 2019-02-07)\\},
 }
 
 @misc{bip,
