start fix comments

--- a/docs/bitcoin.tex
+++ b/docs/bitcoin.tex
@@ -5,13 +5,9 @@ Bitcoin is a peer-to-peer electronic cash system without any trusted third party
 
 \subsection{The Double-Spending problem}
 
-asd
+While digital signatures prove that are only part of the solution. There is nothing to stop the owner of an amount of bitcoin to sign multiple transactions using the same bitcoin. This is called the double-spending problem which is a variation of the more general Byzantine's General Problem.
 
-aasd
-
-asd
-
-asd
+Bitcoin solves this by using a data structure composite of a chain of blocks. For a block to be valid a hash of the block header must be found that  
 
 \subsection{Script}
 
